# tczajka-octal-games

old/: CMakeLists.txt
old/src/: analyze_exec.cc  game.cc
